--- a/application.yml
+++ b/application.yml
@@ -1,9 +1,12 @@
 language: java
 jdk:
 - openjdk7
-after_success:
-- mvn clean cobertura:cobertura
-- mvn test
+branches:
+only:
+-master
+build:
+on_sucess:
+_mvm clean test
 notifications:
 email:
 recipients:
