--- a/shippable.yml
+++ b/shippable.yml
@@ -7,3 +7,8 @@ branches:
 build:
  on_sucess:
   _mvm clean test
+  
+notifications:
+  email:
+    recipients:
+      - n.cunningham12@nuigalway.ie
